# litres-assistant

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile.mcp  Dockerfile.web  LICENSE  README.md  SECURITY.md  TRADEMARKS.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  desktop-linux.yml  desktop-macos.yml  desktop-windows.yml  docker-publish.yml  lint-test-audit.yml  tests.yml
app/: activity.py  cache.py  client.py  credentials.py  download_job.py  mcp_server.py  session.py  web.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
core/: pyproject.toml
core/bookvault_core/: cache.py  client.py  credentials.py  session.py
core/litres_core/: cache.py  client.py  credentials.py  session.py
desktop/: pyproject.toml
desktop/bookvault_desktop/: __init__.py  app.py
mcp/: README.md  pyproject.toml
mcp/bookvault_mcp/: server.py
mcp/litres_mcp/: server.py
packaging/: entry.py
packaging/linux/: BookVault.spec  build-appimage.sh
packaging/macos/: BookVault.spec
packaging/windows/: BookVault.iss  BookVault.spec
tests/: conftest.py  fakes.py  test_activity.py  test_cache.py  test_client.py  test_credentials.py  test_desktop.py  test_download_job.py  test_e2e_smoke.py  test_mcp_server.py  test_prefs.py  test_run.py  test_session.py  test_smoke_live.py  test_web.py
web/: pyproject.toml
web/bookvault_web/: activity.py  app.py  prefs.py  run.py
web/bookvault_web/static/css/: style.css
web/bookvault_web/static/js/: app.js
web/bookvault_web/templates/: index.html
web/litres_web/: activity.py  app.py  run.py
web/litres_web/static/css/: style.css
web/litres_web/static/js/: app.js
web/litres_web/templates/: index.html
