[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "litres-mcp"
version = "0.10.0"
description = "MCP server exposing your litres.ru library (list + download) as tools for MCP clients like Claude Desktop."
requires-python = ">=3.11"
dependencies = [
    "litres-core",
    "mcp==1.28.1",
    "python-dotenv==1.2.2",
    "anyio==4.14.2",
]

[project.scripts]
litres-mcp = "litres_mcp.server:main"

[tool.setuptools]
packages = ["litres_mcp"]
