[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookvault-mcp"
version = "0.12.0"
description = "MCP server exposing your litres.ru library (list + download) as tools for MCP clients like Claude Desktop."
requires-python = ">=3.11"
dependencies = [
    "bookvault-core",
    "mcp==1.28.1",
    "python-dotenv==1.2.2",
    "anyio==4.14.2",
]

[project.scripts]
bookvault-mcp = "bookvault_mcp.server:main"

[tool.setuptools]
packages = ["bookvault_mcp"]
