[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookvault-web"
version = "0.12.0"
description = "Local, single-user web app to browse and back up your litres.ru library."
requires-python = ">=3.11"
dependencies = [
    "bookvault-core",
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.32",
    "python-dotenv==1.2.2",
    "anyio==4.14.2",
    "pydantic==2.13.4",
]

[project.scripts]
bookvault-web = "bookvault_web.run:main"

[tool.setuptools]
packages = ["bookvault_web"]

[tool.setuptools.package-data]
bookvault_web = ["templates/*", "static/css/*", "static/js/*"]
